chore: Fix some VSCode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,13 @@
-{   "terminal.integrated.fontSize": 16,
-    "python.terminal.activateEnvironment": true, 
-    
+{
+    "python.terminal.activateEnvironment": true,
     "python.testing.pytestArgs": [
         "tests"
     ],
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true,
+    "autopep8.args": [
+        "-aa"
+    ],
+    "editor.defaultFormatter": "ms-python.autopep8",
+    "editor.formatOnSave": true,
 }
