chore: Remove more stuff from the build artifact

--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -58,8 +58,12 @@ jobs:
           name: python-app
           path: |
             .
+            !.git/
+            !.gitignore
             !venv/
             !tests/
+            !.pytest_cache/
+            !instructions/
             !*/__pycache__
 
   deploy:
